WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103261
REGRESSION(134887) [Qt][EFL][WK2] Repaint counter not working
https://bugs.webkit.org/show_bug.cgi?id=103261
Summary
REGRESSION(134887) [Qt][EFL][WK2] Repaint counter not working
Kenneth Rohde Christiansen
Reported
2012-11-26 08:32:52 PST
when running with [QT_]WEBKIT_SHOW_COMPOSITING_DEBUG_VISUALS=1 a repaint counter is shown. This shown 1, then next time 10, then next time 100, etc... This is because it cannot reuse texture between 1 and 10 and 100 and 1000, etc. The following fixes it, but something must be wrong with the texture pool, or elsewhere. --- a/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp +++ b/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp @@ -376,7 +376,8 @@ void TextureMapperGL::drawRepaintCounter(int value, int pointSize, const FloatPo IntRect sourceRect(IntPoint::zero(), size); IntRect targetRect(roundedIntPoint(targetPoint), size); - RefPtr<BitmapTexture> texture = acquireTextureFromPool(size); + RefPtr<BitmapTexture> texture = createTexture(); + texture->reset(size);
Attachments
Patch
(1.78 KB, patch)
2012-11-27 02:24 PST
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2012-11-26 10:03:00 PST
wrong bug :/
Noam Rosenthal
Comment 2
2012-11-27 01:47:43 PST
MY guess is that it's not about reusing texture 2-9, but rather that it thinks it only works once the required texture changes size, which is what naturally happens when the counter goes from 9 to 10.
Kenneth Rohde Christiansen
Comment 3
2012-11-27 02:24:51 PST
Created
attachment 176209
[details]
Patch
Kenneth Rohde Christiansen
Comment 4
2012-11-27 02:28:53 PST
Landed in 135839, reviewed on irc.
Simon Hausmann
Comment 5
2012-11-29 00:16:00 PST
Comment on
attachment 176209
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176209&action=review
> Source/WebCore/ChangeLog:12 > + This method obviosly needs to bind the texture.
"obviosly" -> "obviously" ;-)
Simon Hausmann
Comment 6
2012-11-29 00:17:08 PST
Comment on
attachment 176209
[details]
Patch Ooops, clearing review, to make it disappear from the review queue.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug