REGRESSION(134887) [Qt][EFL][WK2] Repaint counter not working https://bugs.webkit.org/show_bug.cgi?id=103261

Reviewed by Noam Rosenthal.

Fixed regression introduced in 134887, which introduced the
updateContentsNoSwizzle method and called it directly from
the repaint counter.

This method obviously needs to bind the texture.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContentsNoSwizzle):

Canonical link: https://commits.webkit.org/121487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135839 268f45cc-cd09-0410-ab3c-d52691b4dbfc